[gd_scene load_steps=9 format=3 uid="uid://b71bxsh7scdyh"]

[ext_resource type="Script" uid="uid://dqawjhav8cttw" path="res://scripts/proxy_mine.gd" id="2_a0fo6"]
[ext_resource type="Texture2D" uid="uid://5iwg8i6f7spx" path="res://assets/sprites/player/powerups/Mine-arming.png" id="2_pqrf2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ddoco"]
atlas = ExtResource("2_pqrf2")
region = Rect2(0, 0, 33, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tiqx"]
atlas = ExtResource("2_pqrf2")
region = Rect2(33, 0, 33, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofdw5"]
atlas = ExtResource("2_pqrf2")
region = Rect2(66, 0, 33, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_adyft"]
atlas = ExtResource("2_pqrf2")
region = Rect2(99, 0, 33, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ofdw5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddoco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tiqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofdw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adyft")
}],
"loop": true,
"name": &"flashing",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5hwcm"]
radius = 32.0

[node name="proxy_mine" type="Area2D"]
script = ExtResource("2_a0fo6")

[node name="despawn_timer" type="Timer" parent="."]

[node name="arming_timer" type="Timer" parent="."]
one_shot = true

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ofdw5")
animation = &"flashing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5hwcm")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="arming_timer" to="." method="_on_arming_timer_timeout"]
